--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -23,3 +23,7 @@ li:not(.menu-title, .menu-disabled)
 body {
     color: color-mix(in oklab, var(--color-base-content) 80%, transparent);
 }
+
+.auth-background {
+    background-image: url('/images/auth-background-2.png');
+}
